WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132377
REGRESSION (
r168046
): [New Multicolumn] Painting order is wrong for columns and fixed positioned elements
https://bugs.webkit.org/show_bug.cgi?id=132377
Summary
REGRESSION (r168046): [New Multicolumn] Painting order is wrong for columns a...
Dave Hyatt
Reported
2014-04-29 22:46:06 PDT
Check out fast/events/offsetX-offsetY.html and move the column block over the fixed positioned element. Everything paints behind the fixed positioned element when the foreground text should paint on top of it.
Attachments
Test case
(1.49 KB, text/html)
2014-04-30 15:20 PDT
,
Dave Hyatt
no flags
Details
Patch
(159.99 KB, patch)
2014-04-30 18:18 PDT
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-29 22:46:22 PDT
I don't think this blocks turning new multicolumn on, but it *will* be important to fix.
Dave Hyatt
Comment 2
2014-04-30 15:20:48 PDT
Created
attachment 230530
[details]
Test case Test case. Note that repainting (e.g., selection) is broken too.
Dave Hyatt
Comment 3
2014-04-30 18:00:20 PDT
This is fixed by changing the layer for the flow thread to be normal flow only but still make it be self-painting.
Dave Hyatt
Comment 4
2014-04-30 18:18:02 PDT
Created
attachment 230551
[details]
Patch
Simon Fraser (smfr)
Comment 5
2014-04-30 18:20:24 PDT
Comment on
attachment 230551
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230551&action=review
> Source/WebCore/rendering/RenderLayer.cpp:6406 > + || renderer().isInFlowRenderFlowThread())
Can you indent this line or unwrap it.
Dave Hyatt
Comment 6
2014-04-30 19:13:30 PDT
Fixed in
r168076
.
Alexey Proskuryakov
Comment 7
2014-05-01 00:05:53 PDT
This change broke fast/multicol/fixed-stack.html:
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r168087%20(5354)/fast/multicol/fixed-stack-diffs.html
Alexey Proskuryakov
Comment 8
2014-05-01 00:06:48 PDT
More precisely, this new test fails on all WK2 testers.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug