REGRESSION (r168046): [New Multicolumn] Painting order is wrong for columns and fixed positioned elements https://bugs.webkit.org/show_bug.cgi?id=132377

Reviewed by Simon Fraser.


Source/WebCore:
Added fast/multicol/fixed-stack.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::shouldBeSelfPaintingLayer):
(WebCore::RenderLayer::shouldBeNormalFlowOnly):
Change the flow thread layer for multicolumn layout to be normal flow only and to
stay self-painting. This has the effect of keeping the flow thread layer grouped
with the enclosing multicolumn layer, and this keeps the paint order correct when
compositing kicks in (or when something would otherwise try to get between the
two layers).

LayoutTests:
* compositing/columns/composited-nested-columns-expected.txt:
* fast/multicol/fixed-stack-expected.html: Added.
* fast/multicol/fixed-stack.html: Added.
* fast/multicol/flipped-blocks-border-after-expected.txt:
* fast/multicol/progression-reverse-expected.txt:
* fast/multicol/single-line-expected.txt:
* fast/multicol/vertical-lr/rules-with-border-before-expected.txt:
* fast/multicol/vertical-rl/rule-style-expected.txt:
* fast/multicol/vertical-rl/rules-with-border-before-expected.txt:
* platform/mac/fast/multicol/client-rects-expected.txt:
* platform/mac/fast/multicol/client-rects-spanners-complex-expected.txt:
* platform/mac/fast/multicol/client-rects-spanners-expected.txt:
* platform/mac/fast/multicol/column-break-with-balancing-expected.txt:
* platform/mac/fast/multicol/column-count-with-rules-expected.txt:
* platform/mac/fast/multicol/float-paginate-complex-expected.txt:
* platform/mac/fast/multicol/layers-in-multicol-expected.txt:
* platform/mac/fast/multicol/layers-split-across-columns-expected.txt:
* platform/mac/fast/multicol/newmulticol/client-rects-expected.txt:
* platform/mac/fast/multicol/span/span-as-immediate-child-complex-splitting-expected.txt:
* platform/mac/fast/multicol/span/span-as-immediate-child-generated-content-expected.txt:
* platform/mac/fast/multicol/span/span-as-immediate-child-property-removal-expected.txt:
* platform/mac/fast/multicol/span/span-as-immediate-columns-child-dynamic-expected.txt:
* platform/mac/fast/multicol/span/span-as-immediate-columns-child-expected.txt:
* platform/mac/fast/multicol/span/span-as-immediate-columns-child-removal-expected.txt:
* platform/mac/fast/multicol/span/span-as-nested-columns-child-dynamic-expected.txt:
* platform/mac/fast/multicol/span/span-as-nested-columns-child-expected.txt:
* platform/mac/fast/multicol/span/span-margin-collapsing-expected.txt:
* platform/mac/fast/multicol/table-vertical-align-expected.txt:
* platform/mac/fast/multicol/vertical-lr/column-break-with-balancing-expected.txt:
* platform/mac/fast/multicol/vertical-lr/column-count-with-rules-expected.txt:
* platform/mac/fast/multicol/vertical-lr/float-paginate-complex-expected.txt:
* platform/mac/fast/multicol/vertical-rl/column-break-with-balancing-expected.txt:
* platform/mac/fast/multicol/vertical-rl/column-count-with-rules-expected.txt:
* platform/mac/fast/multicol/vertical-rl/float-paginate-complex-expected.txt:



Canonical link: https://commits.webkit.org/150441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168076 268f45cc-cd09-0410-ab3c-d52691b4dbfc